# muandroid123

./: .gitignore  MUnique.OpenMU.sln  ServerBuild.sln  build_errors.txt  logfile
.github/workflows/: android-build.yml
ChatServer/ExDbConnector/: MUnique - Backup.OpenMU.ChatServer.ExDbConnector.csproj
Mu-Online-CrossPlataform-main/: .gitignore  AGENTS.md  ANDROID_PORT_README.md  CLAUDE.md  MOBILE_PORT_ASSESSMENT.md  Main.sln  Main.vcxproj  Main.vcxproj.filters  README.md
Mu-Online-CrossPlataform-main/.claude/: settings.local.json
Mu-Online-CrossPlataform-main/Dependencies/jpeg-9e-src/: jconfig.h
Mu-Online-CrossPlataform-main/android/: README.md  build.gradle  local.properties  run_adb_debug.sh  settings.gradle
Mu-Online-CrossPlataform-main/android/.tmp/: server_menu_b_all_probe.ozt  test-client_runtime-74.ini  test-client_runtime-connect.ini  test-client_runtime.ini
Mu-Online-CrossPlataform-main/android/.tmp/mu-mini-data/Configs/: Configs.xtm
Mu-Online-CrossPlataform-main/android/app/: build.gradle  proguard-rules.pro
Mu-Online-CrossPlataform-main/android/app/src/main/: AndroidManifest.xml
Mu-Online-CrossPlataform-main/android/app/src/main/assets/: README.txt  client_runtime.ini  config.json
Mu-Online-CrossPlataform-main/android/app/src/main/cpp/: CMakeLists.txt  android_bootstrap.cpp
Mu-Online-CrossPlataform-main/android/app/src/main/res/values/: strings.xml
Mu-Online-CrossPlataform-main/source/: BaseCls.h  CBTMessageBox.cpp  CBTMessageBox.h  CCRC32.cpp  CComGem.cpp  CDirection.cpp  CGFxProcess.cpp  CSChaosCastle.cpp  CSPetSystem.cpp  CSQuest.cpp  CSWaterTerrain.cpp  CameraMove.cpp  ChaosGenesis.cpp  CharMakeWin.cpp  CharMakeWin.h  CharSelMainWin.cpp  CharSelMainWin.h  CharacterList.cpp  CharacterList.h  CharacterManager.cpp  Controller.cpp  Controller.h  CreditWin.cpp  CustomCape.cpp  CustomEffects.cpp  CustomEffects.h  CustomJewel.h  CustomSetEffect.cpp  CustomSetEffect.h  Defined_Global.h  Descriptions.cpp  GCCertification.cpp  GIPetManager.cpp  GMAida.h  GMBattleCastle.cpp  GMCryingWolf2nd.cpp  GMCrywolf1st.cpp  GMDoppelGanger4.cpp  GMEmpireGuardian1.cpp  GMHellas.cpp  (+203 more)
Mu-Online-CrossPlataform-main/source/GameShop/: MsgBoxIGSBuyConfirm.cpp  MsgBoxIGSBuyPackageItem.cpp  MsgBoxIGSBuySelectItem.cpp  MsgBoxIGSCommon.cpp  MsgBoxIGSDeleteItemConfirm.cpp  MsgBoxIGSGiftStorageItemInfo.cpp  MsgBoxIGSSendGift.cpp  MsgBoxIGSSendGiftConfirm.cpp  MsgBoxIGSStorageItemInfo.cpp  MsgBoxIGSUseBuffConfirm.cpp  MsgBoxIGSUseItemConfirm.cpp  NewUIInGameShop.cpp
Mu-Online-CrossPlataform-main/source/GameShop/FileDownloader/: FileDownloader.cpp
Mu-Online-CrossPlataform-main/source/GameShop/ShopListManager/: BannerInfo.cpp  Include.h  ListManager.cpp
Mu-Online-CrossPlataform-main/source/Platform/: AndroidEglWindow.cpp  AndroidEglWindow.h  AndroidGameInit.cpp  AndroidGameInit.h  AndroidNetworkPollCompat.cpp  AndroidNetworkPollCompat.h  AndroidTextRenderer.cpp  AndroidTextRenderer.h  AndroidWin32Compat.cpp  AndroidWin32Compat.h  AudioAndroidStub.cpp  GLFixedFunctionStubs.h  GameAssetPath.cpp  GameAssetPath.h  GameBootstrapTexture.cpp  GameBootstrapTexture.h  GameClientConfig.cpp  GameClientConfig.h  GameClientRuntimeConfig.cpp  GameClientRuntimeConfig.h  GameConfigBootstrap.cpp  GameConfigBootstrap.h  GameConnectServerBootstrap.cpp  GameConnectServerBootstrap.h  GameGlobalTextBootstrap.cpp  GameGlobalTextBootstrap.h  GameLanguageAssetBootstrap.cpp  GameLanguageAssetBootstrap.h  GameMouseInput.cpp  GameMouseInput.h  GamePacketCryptoBootstrap.cpp  GamePacketCryptoBootstrap.h  GameServerBootstrap.cpp  GameServerBootstrap.h  GlobalBitmapAndroidCompat.cpp  LegacyAndroidClientStubs.cpp  LegacyAndroidGameCompat.h  LegacyAndroidUiCompat.cpp  LegacyAndroidUiCompat.h  LegacyCharacterSceneCompat.cpp  (+27 more)
Mu-Online-CrossPlataform-main/source/Utilities/Log/: DebugAngel.cpp  muConsoleDebug.cpp
Startup/: MUnique.OpenMU.Startup.csproj  Program.cs
